--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>{{ page.title }} | Deskovery</title>
+  <title>{{ page.title }} | Choi Byeongseon</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -13,7 +13,7 @@
 
   <header class="site-header">
     <div class="container">
-      <h1 class="site-title">Choi Byeongseon</h1>
+      <h1 class="site-title">Deskovery</h1>
       <nav class="site-nav">
         <a href="/">Home</a>
         <a href="/about">About</a>
