--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,3 +98,16 @@ hr {
     font-size: 30px;
   }
 }
+
+/* ---------- Improve project cards ---------- */
+
+.project img {
+  max-width: 100%;
+  border-radius: 8px;
+  margin: 20px 0;
+}
+
+.project video {
+  margin: 20px 0;
+  border-radius: 8px;
+}
