--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,9 @@
         <a href="/about">About</a>
         <a href="/projects">Projects</a>
         <a href="/thesis">Thesis</a>
+        <a href="/assets/cv/byeongseon-choi-cv.pdf" target="_blank" class="cv-button">
+          CV
+        </a>
       </nav>
     </div>
   </header>
