--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,9 +19,7 @@
         <a href="/about">About</a>
         <a href="/projects">Projects</a>
         <a href="/thesis">Thesis</a>
-        <a href="/assets/cv/byeongseon-choi-cv.pdf" target="_blank" class="cv-button">
-          CV
-        </a>
+        <a href="/resume">Resume</a>
       </nav>
     </div>
   </header>
