--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,6 +20,10 @@
         <a href="/projects">Projects</a>
         <a href="/thesis">Thesis</a>
         <a href="/resume">Resume</a>
+
+        <button id="theme-toggle" aria-label="Toggle dark mode">
+          🌙
+        </button>
       </nav>
     </div>
   </header>
