--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,23 @@
   <link rel="stylesheet" href="/assets/css/style.css" />
 </head>
 
+<script>
+  const toggle = document.getElementById("theme-toggle");
+  const body = document.body;
+
+  if (localStorage.getItem("theme") === "dark") {
+    body.classList.add("dark");
+  }
+
+  toggle.onclick = () => {
+    body.classList.toggle("dark");
+    localStorage.setItem(
+      "theme",
+      body.classList.contains("dark") ? "dark" : "light"
+    );
+  );
+</script>
+  
 <body>
 
   <header class="site-header">
