--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,18 +41,19 @@
   <script>
     const toggle = document.getElementById("theme-toggle");
     const body = document.body;
-  
+
     if (localStorage.getItem("theme") === "dark") {
       body.classList.add("dark");
     }
-  
-    toggle.onclick = () => {
+
+    toggle.addEventListener("click", () => {
       body.classList.toggle("dark");
+
       localStorage.setItem(
         "theme",
         body.classList.contains("dark") ? "dark" : "light"
       );
-    };
+    });
   </script>
   
 </body>
