--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -159,7 +159,8 @@ main strong {
 }
 
 .project-card img {
-  width: 50%;
+  width: 100%;
+  height: 140px;
   object-fit: cover;
   border-radius: 8px;
   margin-bottom: 12px;
