--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,6 +38,20 @@
     </div>
   </footer>
 
+  <!-- MathJax -->
+  <script>
+    window.MathJax = {
+      tex: {
+        inlineMath: [['$', '$'], ['\\(', '\\)']],
+        displayMath: [['$$', '$$'], ['\\[', '\\]']]
+      }
+    };
+  </script>
+
+  <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"
+          async></script>
+
+  <!-- Dark mode -->
   <script>
     const toggle = document.getElementById("theme-toggle");
     const body = document.body;
