--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,6 +20,7 @@
         <a href="/projects">Projects</a>
         <a href="/thesis">Thesis</a>
         <a href="/resume">Resume</a>
+        <a href="/contact">Contact</a>
 
         <button id="theme-toggle" aria-label="Toggle dark mode">
           🌙
