--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,9 @@
 
   <header class="site-header">
     <div class="container">
-      <h1 class="site-title">Bezalel's Craft</h1>
+      <h1 class="site-title">
+        <a href="{{ '/' | relative_url }}">Bezalel's Craft</a>
+      </h1>
       <nav class="site-nav">
         <a href="/">Home</a>
         <a href="/about">About</a>
