--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -75,6 +75,18 @@
       );
     });
   </script>
+
+  <script>
+    function playColorPair() {
+      document.getElementById("colorGui").play();
+      document.getElementById("colorConv").play();
+    }
+
+    function playSizePair() {
+      document.getElementById("sizeGui").play();
+      document.getElementById("sizeConv").play();
+    }
+  </script>
   
 </body>
 </html>
