--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -117,7 +117,7 @@ hr {
 }
 
 .dark .project video {
-  background: #111;
+  background: red;
 }
 
 /* ---------- Style the resume page slightly ---------- */
