--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -112,12 +112,13 @@ hr {
   margin: 20px 0;
   border-radius: 8px;
   
-  background: #333;
+  background: #000;
   min-height: 160px;
 }
 
-body.dark .project video {
-  background: #00aaff;
+/* NOT Working */
+.dark .project video {
+  background: #111;
 }
 
 /* ---------- Style the resume page slightly ---------- */
